[B]1.1.28[/B]
Fixed issues with multi backgrounds and background playlists

[B]1.1.27[/B]
Background code improvements
Added trakt - add to watchlist button
Code improvements
fixed issues (!thx)
minor adjustements

[B]1.1.26[/B]
Fixed a lot of issues
Added now playing setting
Code improvements
Views adjusted for better consistency

[B]1.1.25[/B]
Fixed weather issue

[B]1.1.24[/B]
Added indicator setting
Fixed playback issue (!thx)
Code improvements, cleanup
Added tmdbhelper fallback labels
Added setting to diable next aired info

[B]1.1.23[/B]
Code improvements, cleanup
Fixed a lot of issues
Added option for widgets fade animation
Added discart for osd
Added new HDR, DolbyVision and web-dl flags
Added option to set spotlight widget path
Added autoscroll for classic widgets
Enabled extended infos for episodes

[B]1.1.22[/B]
Improvements on plot overlays
Code and texture improvements, cleanup
Language strings updated by several contributors, thx!

[B]1.1.21[/B]
Code improvements, cleanup
ColorPicker dialog improvements
DialogSelect using poster instead icon, if available
Scrollbar improvements
Texture improvements
Option to select media flags added
Added homemenu viewtype selector
Minor adjustments of now playing
Fixed a lot of issues
Ultra HD Blu Ray icon added
Language strings updated by several contributors, thx!
Addon is renamed to Arctic: Zephyr - Reloaded
Added option to hide all indicators
Added widget 6
Added custom powermenu

[B]1.1.20[/B]
Added netflix homemenu layout
Added custom widgets

[B]1.1.19[/B]
Fixed issues, code cleanup
Improvements on animations
Added custom coreelec settings

[B]1.1.18[/B]
Code improvements
Fixed issues

[B]1.1.17[/B]
Improvements on dialoginfo overlay
Fixed issue with sets info
Added support for script.skin.info.service

[B]1.1.16[/B]
Widgets cleanup, improvements on supported addons section

[B]1.1.15[/B]
Fixed a lot of issues, cleaned up the code
Cinema experience support of embuary.helper addon added
Widgets added