@@ -1,3 +1,11 @@
+[B]1.1.29[/B]
+Improved widget diffuse textures
+Added option to disable startup window
+Removed unneeded textures
+Fixed issues
+Added tvshow provider icons to extended infos
+Code cleanup
+
 [B]1.1.28[/B]
 Fixed issues with multi backgrounds and background playlists
 
